--- a/webpage_style.css
+++ b/webpage_style.css
@@ -1,134 +1,140 @@
-  body {
-    text-align: center;
-    background: #111;
-    color: white;
-  }
+ @import "tailwindcss";
 
-  h1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 800;
-    font-size: 40px;
-  }
+ body {
+   text-align: center;
+   background: black;
+   color: white;
+ }
 
-  /* 盒子布局  ----------------------------------------------------------------------------------------- */
-  .box {
-    max-width: calc(100% - 160px);
-    /* 减去左右边距 */
-    margin: 20px auto;
-    padding: 0 80px;
-    /* 可选，内部元素也有内边距 */
-    display: flex;
-    background: #222;
-    transition: all 0.5s;
-  }
+ h1 {
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: 800;
+   font-size: 40px;
+ }
 
-  .box-left,
-  .box-right {
-    width: 600px;
-    /* 固定宽度 */
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-  }
+ #uicanvas {
+   position: absolute;
+ }
 
-  .box-left {
-    background-color: black;
-  }
+ /* 盒子布局  ----------------------------------------------------------------------------------------- */
+ .box {
+   max-width: calc(100% - 160px);
+   /* 减去左右边距 */
+   margin: 20px auto;
+   padding: 0px;
+   /* 可选，内部元素也有内边距 */
+   display: flex;
+   /* background: #222; */
+   transition: all 0.5s;
+ }
 
-  .box-right {
-    background-color: black;
-  }
+ .box-left,
+ .box-right {
+   width: 600px;
+   /* 固定宽度 */
+   height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   flex-direction: column;
+ }
 
-  /* 中间自动拉伸的空白区域 */
-  .spacer {
-    flex: 1;
-  }
+ .box-left {
+   /* background-color: black; */
+ }
 
-  /* 显示屏框架设定 -----------------------------------------------------------------------------------------*/
-  .prototype {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    align-items: center;
-    height: 90vh;
-    width: 41.1vh;
-    /* border: 1px, solid, white; */
-  }
+ .box-right {
+   /* background-color: black; */
+ }
 
-  .screen {
-    height: 77%;
-    /* height: 69.2vh; */
-    width: 100%;
-    border: 1px solid #444;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 12px 12px 0px 0px;
-    background-color: silver;
-  }
+ /* 中间自动拉伸的空白区域 */
+ .spacer {
+   flex: 1;
+ }
 
-  .base {
-    height: 23%;
-    width: 100%;
-    /* width: 41.1vh; */
-    border: 1px solid #444;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0px 0px 12px 12px;
-    background-color: silver;
-  }
+ /* 显示屏框架设定 -----------------------------------------------------------------------------------------*/
+ .prototype {
+   display: flex;
+   flex-direction: column;
+   align-self: center;
+   align-items: center;
+   height: 90vh;
+   width: 41.1vh;
+   /* border: 1px, solid, white; */
+ }
+
+ .screen {
+   height: 77%;
+   /* height: 69.2vh; */
+   width: 100%;
+   border: 1px solid #444;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   border-radius: 12px 12px 0px 0px;
+   background-color: silver;
+ }
+
+ .base {
+   height: 23%;
+   width: 100%;
+   /* width: 41.1vh; */
+   border: 1px solid #444;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 0px 0px 12px 12px;
+   background-color: silver;
+ }
 
 
-  /* 视频区域画布设定  -----------------------------------------------------------------------------------------*/
-  canvas {
-    height: 60.5vh;
-    width: 34.6vh;
-    border: 1px solid #444;
-    border-radius: 8px;
-    margin-top: 30px;
-    background-color: black;
-  }
+ /* 视频区域画布设定  -----------------------------------------------------------------------------------------*/
+ canvas {
+   height: 60.5vh;
+   width: 34.6vh;
+   border: 1px solid #444;
+   border-radius: 8px;
+   margin-top: 30px;
+   /* background-color: black; */
+ }
 
-  .start-button {
-    margin-top: 10px;
-    height: 20px;
-  }
+ .start-button {
+   margin-top: 10px;
+   height: 20px;
+ }
 
-  /* 标签栏 条形显示 */
-  #label-container div {
-    font-size: 18px;
-    /* margin-top: 5px; */
-  }
+ /* 标签栏 条形显示 */
+ #label-container div {
+   font-size: 18px;
+   /* margin-top: 5px; */
+ }
 
-  .bar-container {
-    align-items: center;
-    justify-items: center;
-    margin: 0px, 0;
-  }
+ .bar-container {
+   align-items: center;
+   justify-items: center;
+   margin: 0px, 0;
+ }
 
-  .label {
-    font-size: 14px;
-    display: inline-block;
-    margin-bottom: 4px;
-  }
+ .label {
+   font-size: 14px;
+   display: inline-block;
+   margin-bottom: 4px;
+ }
 
-  .bar {
-    width: 34.6vh;
-    height: 16px;
-    background-color: #444;
-    border-radius: 8px;
-    overflow: hidden;
-  }
+ .bar {
+   width: 34.6vh;
+   height: 16px;
+   background-color: #444;
+   border-radius: 8px;
+   overflow: hidden;
+ }
 
-  .fill {
-    margin: 0px;
-    height: 100%;
-    width: 0%;
-    background-color: #00ccff;
-    transition: width 0.3s ease;
-  }
+ .fill {
+   margin: 0px;
+   height: 100%;
+   width: 0%;
+   background-color: #00ccff;
+   transition: width 0.3s ease;
+ }
