--- a/webpage_style.css
+++ b/webpage_style.css
@@ -2,14 +2,17 @@
 
  body {
    text-align: center;
-   background: black;
-   color: white;
+   background-color: #000;
+   /* color: white; */
+   font-family: Arial, Helvetica, sans-serif;
+
  }
 
  h1 {
-   font-family: Arial, Helvetica, sans-serif;
+   color: white;
    font-weight: 800;
    font-size: 40px;
+   text-align: left;
  }
 
  #uicanvas {
@@ -40,13 +43,13 @@
    flex-direction: column;
  }
 
- .box-left {
-   /* background-color: black; */
- }
+ /* .box-left {
+   background-color: black;
+ } */
 
- .box-right {
-   /* background-color: black; */
- }
+ /* .box-right {
+   background-color: black;
+ } */
 
  /* 中间自动拉伸的空白区域 */
  .spacer {
@@ -100,7 +103,9 @@
    /* background-color: black; */
  }
 
- .start-button {
+ #startbutton {
+   line-height: 0;
+   font-size: small;
    margin-top: 10px;
    height: 20px;
  }
@@ -135,6 +140,7 @@
    margin: 0px;
    height: 100%;
    width: 0%;
-   background-color: #00ccff;
+   /* background-color: #00ccff; */
+   background: linear-gradient(90deg, #F074ED, #E46314);
    transition: width 0.3s ease;
  }
