--- a/webpage_style.css
+++ b/webpage_style.css
@@ -23,6 +23,18 @@
    line-height: 20px;
  }
 
+ #animVideo {
+   position: absolute;
+   top: 0;
+   left: 0;
+   margin-top: 30px;
+   border-radius: 8px;
+   height: 60.5vh;
+   width: 34.6vh;
+   pointer-events: none;
+   display: none;
+ }
+
  #uicanvas {
    position: absolute;
  }
