--- a/webpage_style.css
+++ b/webpage_style.css
@@ -23,22 +23,6 @@
    line-height: 20px;
  }
 
- #animVideo {
-   position: absolute;
-   top: 0;
-   left: 0;
-   margin-top: 30px;
-   border-radius: 8px;
-   height: 60.5vh;
-   width: 34.6vh;
-   pointer-events: none;
-   display: none;
- }
-
- #uicanvas {
-   position: absolute;
- }
-
  /* 盒子布局  ----------------------------------------------------------------------------------------- */
  .box {
    max-width: calc(100% - 160px);
@@ -119,16 +103,55 @@
    width: 34.6vh;
    border: 1px solid #444;
    border-radius: 8px;
-   margin-top: 30px;
+   /* margin-top: 30px; */
    /* background-color: black; */
  }
 
+ .video-wrapper {
+   position: relative;
+   width: 100%;
+   height: 100vh;
+   /* 竖向全屏 */
+   overflow: hidden;
+   background: black;
+   /* 可选 */
+ }
+
+ #touchdesigner {
+   position: absolute;
+   top: -10px;
+   left: 0;
+   /* margin-top: 30px; */
+   border-radius: 8px;
+   height: 60.5vh;
+   width: 34.6vh;
+   pointer-events: none;
+   /* display: none; */
+ }
+
+ #animVideo {
+   position: absolute;
+   top: 0;
+   left: 0;
+   /* margin-top: 30px; */
+   border-radius: 8px;
+   height: 60.5vh;
+   width: 34.6vh;
+   pointer-events: none;
+   display: none;
+ }
+
+ #uicanvas {
+   position: absolute;
+ }
+
+ /* 
  #startbutton {
    line-height: 0;
    font-size: small;
    margin-top: 10px;
    height: 20px;
- }
+ } */
 
  /* 标签栏 条形显示 */
  #label-container div {
