--- a/webpage_style.css
+++ b/webpage_style.css
@@ -2,14 +2,15 @@
 
  body {
    text-align: center;
-   background-color: #000;
+   /* background-color: #000; */
+   background-image: url(./asset/image.png);
    /* color: white; */
    font-family: Arial, Helvetica, sans-serif;
 
  }
 
  h1 {
-   margin-top: 30px;
+   margin-top: 80px;
    color: white;
    font-weight: 800;
    font-size: 40px;
@@ -35,9 +36,16 @@
    transition: all 0.5s;
  }
 
+ .box-left {
+   width: 700px;
+ }
+
+ .box-right {
+   width: 500px;
+ }
+
  .box-left,
  .box-right {
-   width: 600px;
    /* 固定宽度 */
    height: 100%;
    display: flex;
@@ -143,6 +151,54 @@
 
  #uicanvas {
    position: absolute;
+ }
+
+ #finish-page {
+   position: absolute;
+   background-image: url(./asset/Frame\ 44.png);
+   background-size: cover;
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+   transition: all 0.5s ease-in-out;
+ }
+
+ #finish-page.show {
+   opacity: 1;
+ }
+
+ #restart {
+   position: absolute;
+   transform: translateX(-50%);
+   top: 50%;
+   opacity: 0;
+   display: none;
+ }
+
+ #restart.show {
+   opacity: 1;
+   display: inline;
+ }
+
+ .bar {
+   position: absolute;
+   rotate: -90deg;
+   top: 50%;
+   right: 40%;
+ }
+
+ .label {
+   position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
+   top: 102%;
+ }
+
+ .MovementImage {
+   position: absolute;
+   transform: translateX(-50%);
+   left: 50%;
+   top: calc(100% - 80px);
  }
 
  /* 
