--- a/webpage_style.css
+++ b/webpage_style.css
@@ -30,6 +30,7 @@
    max-width: calc(100% - 160px);
    /* 减去左右边距 */
    margin: 20px auto;
+   margin-top: 60px;
    padding: 0px;
    /* 可选，内部元素也有内边距 */
    display: flex;
@@ -160,7 +161,7 @@
 
  #finish-page {
    position: absolute;
-   background-image: url(./asset/Frame\ 44.png);
+   background-image: url(./asset/INTRO.png);
    background-size: cover;
    width: 100%;
    height: 100%;
@@ -175,7 +176,7 @@
  #restart {
    position: absolute;
    transform: translateX(-50%);
-   top: 50%;
+   top: 65%;
    opacity: 0;
    display: none;
  }
